# safelyx-py

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  test.py
.github/workflows/: tests.yml
safelyx/: __init__.py
